# CSL_API_App

./: .gitignore  README.md  consolidated-screening-list_openAPI.json  csl_postgres_dev_docker-compose.yml  example.env  pyproject.toml
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
core/constants/: csl_constants.py
core/services/: csl_service.py
csl_api_project/: asgi.py  settings.py  urls.py  wsgi.py
web/: urls.py  views.py
web/templates/web/: about.html  base.html  entity_detail.html  index.html  search.html
